// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

//  **** IMPORTANT NOTE ****
//
//  The proto of BT data has to match exactly the g3 proto, including tag
//  number.

// REST API URL from the proto in this file:
// ========================================
//    /internal/place (/landing-page)
//    /internal/bio
// ========================================

syntax = "proto3";
package datacommons;

option go_package = "github.com/datacommonsorg/mixer/internal/proto";

// Request to get all data in bio page.
message GetBioPageDataRequest {
  // The dcid of the entity
  string dcid = 1;
}

// Request to Import raw data files into database.
// Currently only support import into SQLite database.
message ImportRequest {
}

// Response of import request.
message ImportResponse {
  // Whether the import is successful.
  bool success = 1;
}